<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bt_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/St_t" />

        <Button
            android:id="@+id/Game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_name" />

        <Button
            android:id="@+id/bt_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Table_t" />

        <Button
            android:id="@+id/bt_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ab_t" />
    </LinearLayout>



</LinearLayout>