<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="206dp"
            android:layout_height="59dp"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9"
            app:srcCompat="@drawable/question" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="206dp"
            android:layout_height="59dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/minecraft" />

        <Button
            android:id="@+id/minecraft_bt"
            android:layout_width="206dp"
            android:layout_height="59dp"
            android:layout_marginEnd="8dp"
            android:text="@string/minecraft_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="206dp"
            android:layout_height="59dp"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:srcCompat="@drawable/physics" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="206dp"
            android:layout_height="59dp"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:srcCompat="@drawable/doom" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="206dp"
            android:layout_height="59dp"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/history_game" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="206dp"
            android:layout_height="59dp"
            android:layout_marginTop="28dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:srcCompat="@drawable/half_life" />

        <Button
            android:id="@+id/fisika_bt"
            android:layout_width="206dp"
            android:layout_height="59dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/physics_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/minecraft_bt" />

        <Button
            android:id="@+id/doom_bt"
            android:layout_width="206dp"
            android:layout_height="59dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/doom_test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/fisika_bt" />

        <Button
            android:id="@+id/history_game_bt"
            android:layout_width="206dp"
            android:layout_height="59dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/history_games"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/doom_bt" />

        <Button
            android:id="@+id/Half_bt"
            android:layout_width="206dp"
            android:layout_height="59dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/Half_life"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/history_game_bt" />

        <Button
            android:id="@+id/bt_question"
            android:layout_width="206dp"
            android:layout_height="59dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/Half_bt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>